[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"

[project]
name = "toolenv"
version = "0.0.0"
description = "Utilities for command-line tools and scripts."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = []
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Free Threading :: 1 - Unstable",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = ["typing-extensions>=4.15.0"]

[project.urls]
Changelog = "https://github.com/tbhb/toolenv/blob/main/CHANGELOG.md"
Documentation = "https://toolenv.tbhb.dev"
Homepage = "https://toolenv.tbhb.dev"
Issues = "https://github.com/tbhb/toolenv/issues"
Repository = "https://github.com/tbhb/toolenv"

[dependency-groups]
dev = [
  "basedpyright>=1.36.1",
  "codespell>=2.4.1",
  "cosmic-ray>=8.4.3; sys_platform != 'win32'",
  "dirty-equals>=0.11",
  "faker>=39.0.0",
  "hypothesis>=6.148.7",
  "import-linter>=2.9",
  "prek>=0.2.23",
  "py-spy>=0.4.1",
  "pyfakefs>=6.0.0",
  "pytest>=9.0.2",
  "pytest-codspeed>=4.2.0",
  "pytest-cov>=7.0.0",
  "pytest-examples>=0.0.18",
  "pytest-memray>=1.8.0; sys_platform != 'win32'",
  "pytest-mock>=3.15.1",
  "pytest-test-groups>=1.2.1",
  "rich>=14.2.0",
  "ruff>=0.14.10",
  "statistics>=1.0.3.5",
  "vale>=3.13.0.0",
  "yamllint>=1.37.1",
]
release = ["cyclonedx-bom>=7.2.1"]

[tool.basedpyright]
exclude = ["**/node_modules", "**/tmp", "examples/**"]
include = ["src", "tests"]
pythonVersion = "3.10"
reportImplicitRelativeImport = "none"
reportImportCycles = "error"
allowedUntypedLibraries = ["pyfakefs", "pytest_codspeed", "unittest.mock"]

[tool.codespell]
skip = "coverage.xml,coverage.json,uv.lock,htmlcov,tmp,pnpm-lock.yaml,docs,site,dist,*.cdx.json"
ignore-words-list = "AKS,CrossReference,Nd,Wont,WONT"

[tool.pytest]
addopts = [
  "--import-mode=importlib",
  "--tb",
  "short",
  "-m",
  "not benchmark and not slow",
]
pythonpath = ["src", "."]
filterwarnings = ["error"]
testpaths = ["tests"]
strict = true
markers = [
  "benchmark: mark a test as a benchmark test (excluded by default, run with -m benchmark).",
  "example: mark a test as a documentation example test.",
  "fuzz: mark a test as a fuzz test.",
  "limit_memory: mark a test with memory limit (pytest-memray marker).",
  "slow: mark a test as slow (excluded by default, run with -m slow).",
  "integration: mark a test as an integration test.",
  "property: mark a test as a property test.",
  "unit: mark a test as a unit test.",
]

[tool.coverage.paths]
source = ["src/toolenv"]

[tool.coverage.run]
branch = true
source = ["src/toolenv"]
relative_files = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "@abstractmethod",
  "@abc.abstractmethod",
]
precision = 2
show_missing = true
skip_covered = false

[tool.coverage.xml]
output = "coverage.xml"

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff]
extend-exclude = ["**/node_modules", "**/scripts", "**/tmp", "**/examples"]
force-exclude = true
target-version = "py310"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
  "A",     # flake8-builtins
  "ARG",   # flake8-unused-arguments
  "ASYNC", # flake8-async
  "B",     # bugbear
  "BLE",   # flake8-blind-except
  "C4",    # flake8-comprehensions
  "D",     # pydocstyle
  "DTZ",   # flake8-datetimez
  "E",     # pycodestyle (error)
  "EM",    # flake8-errmsg
  "EXE",   # flake8-executable
  "F",     # pyflakes
  "FBT",   # flake8-boolean-trap
  "FURB",  # refurb
  "G",     # flake8-logging-format
  "I",     # isort
  "ICN",   # flake8-import-conventions
  "ISC",   # flake8-implicit-str-concat
  "LOG",   # flake8-logging
  "N",     # pep8-naming
  "PERF",  # Perflint
  "PGH",   # pygrep-hooks
  "PIE",   # flake8-pie
  "PL",    # pylint
  "PT",    # flake8-pytest-style
  "PTH",   # flake8-use-pathlib
  "PYI",   # flake8-pyi
  "RET",   # flake8-return
  "RUF",   # Ruff-specific rules
  "S",     # flake8-bandit
  "SIM",   # flake8-simplify
  "SLF",   # flake8-self
  "SLOT",  # flake8-slots
  "TC",    # flake8-type-checking
  "TD",    # flake8-todos
  "TID",   # flake8-tidy-imports
  "T10",   # flake8-debugger
  "T20",   # flake8-print
  "TRY",   # tryceratops
  "UP",    # pyupgrade
]
ignore = ["TD003"]
pydocstyle = { convention = "google" }

[tool.ruff.lint.isort]
combine-as-imports = true
extra-standard-library = ["typing_extensions"]
forced-separate = ["tests"]

[tool.ruff.lint.flake8-type-checking]
quote-annotations = true

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = [
  "D",       # docstrings in tests
  "S101",    # assert statements in tests
  "PLR2004", # magic values in assertions in tests
]
"src/toolenv/_exceptions.py" = [
  "TC001", # direct imports from _types.py to break circular import cycle
]
